--- a/register.html
+++ b/register.html
@@ -219,9 +219,9 @@ body {
         <div id="navbar-menu" class="collapse navbar-collapse detached">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item"><a class="nav-link text-dark" href="index.html">Home</a></li>
-            <li class="nav-item"><a class="nav-link text-dark" href="Register.html">Register</a></li>
+            <li class="nav-item"><a class="nav-link text-dark" href="register.html">Register</a></li>
             <li class="nav-item"><a class="nav-link text-dark" href="login.html">Login</a></li>
-            <li class="nav-item"><a class="nav-link text-dark" href="About.html">About</a></li>
+            <li class="nav-item"><a class="nav-link text-dark" href="about.html">About</a></li>
           </ul>
         </div>
       </div>
