--- a/login.html
+++ b/login.html
@@ -330,64 +330,74 @@ body {
       }
     });
     document.getElementById("loginForm").addEventListener("submit", function(event) {
-            event.preventDefault();
-            const loginInput = document.getElementById("loginInput").value;
-            const loginPassword = document.getElementById("loginPassword").value;
+    event.preventDefault();
+    const loginInput = document.getElementById("loginInput").value;
+    const loginPassword = document.getElementById("loginPassword").value;
 
-            const registeredUsers = JSON.parse(localStorage.getItem("registeredUsers")) || [];
-            const foundUser = registeredUsers.find(user => 
-                user.email === loginInput || user.username === loginInput
-            );
+    if (!loginInput || !loginPassword) {
+        alert("Please fill in all fields");
+        return;
+    }
 
-            if (foundUser && foundUser.password === loginPassword) {
-                localStorage.setItem("loggedInUser", JSON.stringify(foundUser));
-                alert("Login successful");
-                window.location.href = "personal_info.html"; // Redirect to details page
-            } else {
-                alert("Invalid credentials or user not found");
-            }
-        });
+    const registeredUsers = JSON.parse(localStorage.getItem("registeredUsers")) || [];
+    const foundUser = registeredUsers.find(user =>
+        user.email === loginInput || user.username === loginInput
+    );
 
+    if (foundUser && foundUser.password === loginPassword) {
+        localStorage.setItem("loggedInUser", JSON.stringify(foundUser));
+        alert("Login successful");
+        window.location.href = "personal_info.html"; // Redirect to details page
+    } else {
+        alert("Invalid credentials or user not found");
+    }
+});
 
-        document.addEventListener("DOMContentLoaded", function() {
-            const registerForm = document.getElementById("registerForm");
-            const loginLink = document.getElementById("loginLink");
+document.addEventListener("DOMContentLoaded", function() {
+    const registerForm = document.getElementById("registerForm");
+    const loginLink = document.getElementById("loginLink");
 
-            // Check if a user is already registered using stored email address or username
-            const storedUsers = JSON.parse(localStorage.getItem("registeredUsers")) || [];
-            const registeredUser = storedUsers.find(user => user.email === storedUsers.email);
+    // Check if a user is already registered using stored email address or username
+    const storedUsers = JSON.parse(localStorage.getItem("registeredUsers")) || [];
+    const registeredUser = storedUsers.find(user => user.email === storedUsers.email);
 
-            if (registeredUser) {
-                loginLink.style.display = "block"; // Show the Login button if registered
-            }
+    if (registeredUser) {
+        loginLink.style.display = "block"; // Show the Login button if registered
+    }
 
-            registerForm.addEventListener("submit", function(event) {
-                event.preventDefault();
-                const email = document.getElementById("email").value;
-                const username = document.getElementById("username").value;
-                const password = document.getElementById("password").value;
-                const confirmPassword = document.getElementById("confirmPassword").value;
+    registerForm.addEventListener("submit", function(event) {
+        event.preventDefault();
+        const email = document.getElementById("email").value;
+        const username = document.getElementById("username").value;
+        const password = document.getElementById("password").value;
+        const confirmPassword = document.getElementById("confirmPassword").value;
 
-                if (password !== confirmPassword) {
-                    alert("Passwords do not match");
-                    return;
-                }
+        if (!email || !username || !password ) {
+            alert("Please fill in all fields");
+            return;
+        }
 
-                // Check if the email or username is already registered
-                const userExists = storedUsers.some(user => user.email === email || user.username === username);
-                if (userExists) {
-                    alert("Email address or username already registered");
-                    return;
-                }
+        if (password !== confirmPassword) {
+            alert("Passwords do not match");
+            return;
+        }
 
-                // Store registered user data in localStorage
-                storedUsers.push({ email, username, password });
-                localStorage.setItem("registeredUsers", JSON.stringify(storedUsers));
+        // Check if the email or username is already registered
+        const userExists = storedUsers.some(user => user.email === email || user.username === username);
+        if (userExists) {
+            alert("Email address or username already registered");
+            return;
+        }
 
-                alert("Registration successful");
-                loginLink.style.display = "block"; // Show the Login button after successful registration
-            });
-        });
+        // Store registered user data in localStorage
+        storedUsers.push({ email, username, password });
+        localStorage.setItem("registeredUsers", JSON.stringify(storedUsers));
+
+        alert("Registration successful");
+        loginLink.style.display = "block"; // Show the Login button after successful registration
+    });
+});
+
 
          // Get the button
  let mybutton = document.getElementById("myBtn");
