--- a/register.html
+++ b/register.html
@@ -237,12 +237,19 @@ body {
             <div class="form-group">
                 <input type="text" id="username" class="form-control" placeholder="Username">
             </div>
-            <div class="form-group">
-                <input type="password" id="password" class="form-control" placeholder="Password">
-            </div>
-            <div class="form-group">
-                <input type="password" id="confirmPassword" class="form-control" placeholder="Confirm Password">
-            </div>
+            <div class="row">
+              <div class="col-md-6">
+                  <div class="form-group">
+                      <input type="password" id="password" class="form-control" placeholder="Password">
+                  </div>
+              </div>
+              <div class="col-md-6">
+                  <div class="form-group">
+                      <input type="password" id="confirmPassword" class="form-control" placeholder="Confirm Password">
+                  </div>
+              </div>
+          </div>
+          
             <button type="submit" class="btn btn-primary btn-block">Register</button>
             <a href="login.html" id="loginLink" class="btn btn-secondary btn-block mt-2">Login</a>
         </form>
