--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ body {
 
 #intro {
   width: 100%;
-  background-color:#fffaf0b3;
+  background-color:#8b8a86b3;
   height:70vh;
   padding-top:0;
   background: url("ghouse.jpeg") top center;
@@ -103,7 +103,7 @@ body {
 
 #intro:before {
   content: "";
-  background: rgba(241, 238, 238, 0.314);
+  background: rgba(255, 252, 252, 0.314);
   position: absolute;
   bottom: 0;
   top: 0;
@@ -218,27 +218,42 @@ body {
 
 /* Small screens (phones) */
 @media only screen and (max-width: 600px) {
-  /* Adjust styles for small screens */
   .carousel-text {
     font-size: 14px;
   }
+.carousel-item{
+  width:100%
+}
 }
 
 /* Medium screens (tablets) */
 @media only screen and (min-width: 601px) and (max-width: 1024px) {
-  /* Adjust styles for medium screens */
   .carousel-text {
     font-size: 16px;
   }
+  .carousel-item{
+  width:100%
+}
 }
 
 /* Large screens (desktops, laptops) */
 @media only screen and (min-width: 1025px) {
-  /* Adjust styles for large screens */
   .carousel-text {
     font-size: 18px;
   }
+  .carousel-item{
+  width:100%
 }
+}
+/* Screens less than 780px */
+@media only screen and (max-width: 780px) {
+  .carousel-text {
+    display: block; /* Ensure the text is displayed */
+  }
+  .carousel-item{
+  width:100%
+}
+
    
   </style>
 </head>
@@ -264,7 +279,7 @@ body {
   <section id="intro" class="d-flex justify-content-center align-items-center">
     <div class="text-center">
         <h1 class="text-dark">Welcome to Zamfara State Online Central Database</h1>
-        <p class="text-dark">Empowering Zamfara State with a cutting-edge online central database system, 
+        <p class="text-white-black-150">Empowering Zamfara State with a cutting-edge online central database system, 
           connecting individuals, communities, and organizations for efficient information management.
           Our platform serves as a centralized hub, fostering seamless access to vital data, educational resources, employment opportunities, and governmental services for the vibrant populace of Zamfara State.Explore our comprehensive database, designed to streamline information dissemination, facilitate effective governance, and empower the citizens of Zamfara State.</p>
     </div>
