--- a/index.html
+++ b/index.html
@@ -253,8 +253,22 @@ body {
   .carousel-item{
   width:100%
 }
+@media (max-width: 992px) {
+  #intro .container {
+    padding-top: 62px;
+  }
+}}
+@media (min-width: 1024px) {
+  #intro {
+    background-attachment: fixed;
+  }
+}
 
-   
+@media (max-width: 768px) {
+  #intro {
+    height: 100vh;
+  }
+}
   </style>
 </head>
 <body>
