--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ body {
   width: 100%;
   background-color:#8b8a86b3;
   height:70vh;
-  padding-top:0;
+  padding-top:40px;
   background: url("ghouse.jpeg") top center;
   background-size: cover;
   position: relative;
@@ -293,7 +293,7 @@ body {
   <section id="intro" class="d-flex justify-content-center align-items-center">
     <div class="text-center">
         <h1 class="text-dark">Welcome to Zamfara State Online Central Database</h1>
-        <p class="text-white">Empowering Zamfara State with a cutting-edge online central database system, 
+        <p class="text-dark">Empowering Zamfara State with a cutting-edge online central database system, 
           connecting individuals, communities, and organizations for efficient information management.
           Our platform serves as a centralized hub, fostering seamless access to vital data, educational resources, employment opportunities, and governmental services for the vibrant populace of Zamfara State.Explore our comprehensive database, designed to streamline information dissemination, facilitate effective governance, and empower the citizens of Zamfara State.</p>
     </div>
