--- a/passwordreset.html
+++ b/passwordreset.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>login-page</title>
+  <title>password reset</title>
   <!-- Bootstrap CSS -->
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -209,40 +209,36 @@ body {
   </style>
 </head>
 <body>
-  <header id="navbar">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-light">
-      <div class="container">
-        <a href="/" class="navbar-brand text-dark">Cloud Database</a>
-        <button type="button" class="navbar-toggler" aria-label="Toggle menu" aria-expanded="false" aria-controls="navbar-menu" data-toggle="collapse" data-target="#navbar-menu">
-          <span class="navbar-toggler-icon bg-secondary"></span>
-        </button>
-        <div id="navbar-menu" class="collapse navbar-collapse detached">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item"><a class="nav-link text-dark" href="index.html">Home</a></li>
-            <li class="nav-item"><a class="nav-link text-dark" href="register.html">Register</a></li>
-            <li class="nav-item"><a class="nav-link text-dark" href="login.html">Login</a></li>
-            <li class="nav-item"><a class="nav-link text-dark" href="about.html">About</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-  </header>
+    <header id="navbar">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-light">
+          <div class="container">
+            <a href="/" class="navbar-brand text-dark">Cloud Database</a>
+            <button type="button" class="navbar-toggler" aria-label="Toggle menu" aria-expanded="false" aria-controls="navbar-menu" data-toggle="collapse" data-target="#navbar-menu">
+              <span class="navbar-toggler-icon bg-secondary"></span>
+            </button>
+            <div id="navbar-menu" class="collapse navbar-collapse detached">
+              <ul class="navbar-nav ml-auto">
+                <li class="nav-item"><a class="nav-link text-dark" href="index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link text-dark" href="register.html">Register</a></li>
+                <li class="nav-item"><a class="nav-link text-dark" href="login.html">Login</a></li>
+                <li class="nav-item"><a class="nav-link text-dark" href="about.html">About</a></li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </header>
   <div class="container mt-5">
     <div class="col-md-6 offset-md-3">
-        <h2 class="mb-4">Login</h2>
-        <form id="loginForm">
+        <h2 class="mb-4">Reset Password</h2>
+        <form id="resetPasswordForm">
             <div class="form-group">
-                <input type="text" id="loginInput" class="form-control" placeholder="Email/Username">
+                <input type="text" id="resetInput" class="form-control" placeholder="Email/Username">
             </div>
-            <div class="form-group">
-                <input type="password" id="loginPassword" class="form-control" placeholder="Password">
-            </div>
-            <button type="submit" class="btn btn-primary btn-block">Login</button>
-            <a href="passwordreset.html">Forgot Password?</a>
-          </form>
+            <button type="submit" class="btn btn-primary btn-block">Reset Password</button>
+        </form>
     </div>
-</div>
-<br><br><br>
+  </div>
+<br><br></BR><br>
 <footer class="bg-light text-dark pt-4">
   <div class="container">
       <div class="row">
@@ -329,30 +325,44 @@ body {
         });
       }
     });
-    document.getElementById("loginForm").addEventListener("submit", function(event) {
+    document.getElementById("resetPasswordForm").addEventListener("submit", function(event) {
     event.preventDefault();
-    const loginInput = document.getElementById("loginInput").value;
-    const loginPassword = document.getElementById("loginPassword").value;
+    const resetInput = document.getElementById("resetInput").value;
 
-    if (!loginInput || !loginPassword) {
-        alert("Please fill in all fields");
+    if (!resetInput) {
+        alert("Please enter your email or username");
         return;
     }
 
-    const registeredUsers = JSON.parse(localStorage.getItem("registeredUsers")) || [];
-    const foundUser = registeredUsers.find(user =>
-        user.email === loginInput || user.username === loginInput
+    const storedUsers = JSON.parse(localStorage.getItem("registeredUsers")) || [];
+    const foundUser = storedUsers.find(user =>
+        user.email === resetInput || user.username === resetInput
     );
 
-    if (foundUser && foundUser.password === loginPassword) {
-        localStorage.setItem("loggedInUser", JSON.stringify(foundUser));
-        alert("Login successful");
-        window.location.href = "personal_info.html"; // Redirect to details page
-    } else {
-        alert("Invalid credentials or user not found");
-    }
-});
+    if (foundUser) {
+            // Here, you can trigger a function to send a password reset link/code to the user's email or phone number
+            // Example:
+            sendPasswordResetLink(foundUser.email, foundUser.phoneNumber); // Replace with your actual function to send the link
 
+            alert("Password reset code has been sent to your registered phone number and email address");
+        } else {
+            alert("User not found");
+        }
+        window.location.href = "code.html";
+    });
+
+
+// Function to send password reset link (replace this with your actual implementation)
+function sendPasswordResetLink(email, phoneNumber) {
+     // Here, integrate with your email service to send an email to the provided email address
+        // Code to send email 
+
+        // Integrate with your SMS service to send a message to the provided phone number
+        //code to send to phoneNumber
+        // Add your logic to send the reset code in  the backend for validation
+    
+    
+}
 
 
          // Get the button
