--- a/passwordreset.html
+++ b/passwordreset.html
@@ -347,6 +347,7 @@ body {
             alert("Password reset code has been sent to your registered phone number and email address");
         } else {
             alert("User not found");
+            return;
         }
         window.location.href = "code.html";
     });
