--- a/education.html
+++ b/education.html
@@ -423,7 +423,7 @@ body {
         event.preventDefault();
         const fileInput = document.createElement("input");
         fileInput.type = "file";
-        fileInput.accept = ".jpg,.jfif"; // Allow only JPG or JFIF files
+        fileInput.accept = ".jpg,.jfif,.png"; // Allow only JPG or JFIF files
         fileInput.addEventListener("change", function () {
             handleProfilePictureUpload(fileInput.files);
         });
